some css corrections for layout editor, align formatter parameters for formatDecimalOpt

--- a/viewer/style/avnav_viewer_new.less
+++ b/viewer/style/avnav_viewer_new.less
@@ -434,6 +434,7 @@ body{
   .combinationSelect,.modeSelect{
       .label, .inputLabel {
         width: 4em;
+        word-break: break-word;
       }
   }
   .currentHeadline {
